--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                 <p>商用NW機器大手のCisco社製ルーター/スイッチ等で幅広く使われているファームウェアです</p>
                 <p>ネットワークエンジニアであれば、CCNAの資格取得でCiscoIOSに触れる機会が多いと思います。</p>
                 <p>強力なタブ補完機能とコマンド省略機能、ドキュメントが無くてもある程度コマンドを探して実行することができる利便性を備えたシステムだと思っています。</p>
-                <p>当クライアントは、CiscoIOSの操作性を最大限にリスペクトした、<a href="https://mstdn.jp/@shiroma" target="_blank">shiroma@mstdn.jp</a>が趣味で作成しているcisco_emulator.jsをマストドンクライアントとして実装したものとなっています。</p>
+                <p>当クライアントは、CiscoIOSの操作性を最大限にリスペクトした、<a href="https://abyss.fun/@guskma" target="_blank">guskma@abyss.fun</a>が趣味で作成しているcisco_emulator.jsをマストドンクライアントとして実装したものとなっています。</p>
                 <h2>コマンドモードについて</h2>
                 <p>CiscoIOSを模した特権モードとコンフィギュレーションモードがあり、さらに追加で独自実装したインスタンスモードが存在します。</p>
                 <h3>特権モード</h3>
